# Timing_problem

./: README  arguments.py  daily_results.csv  data.py  four.py  main.py  nd1s_bidirectional-lstm.ipynb  randomforest-ndns-optuna.ipynb  rl.py  run.sh  stragedy.py  trade_records.csv
lib/: arguments.py  data.py  rl.py
lstm/lib/: arguments.py  utils.py
project/: optuna_trials.csv  pyproject.toml
quant/: backtester.py  data.py  four.py  stragedy.py
